# numengine

./: .gitignore  README.md  generate.lua  install_deps.sh  package-lock.json
install/: install_debian.sh
projectSource/: Makefile
projectSource/src/: code.cpp  code.hpp  main.cpp  palette.hpp
projectSource/src/eadk/: eadk.h  eadk.hpp
projectSource/src/numengine/: error.cpp  error.hpp  infoscreen.cpp  infoscreen.hpp  numengine.hpp  scene.cpp  scene.hpp  sprite.cpp  sprite.hpp
projectTemplate/: .gitattributes  CmakeLists.txt
projectTemplate/src/: main.cpp
projectTemplate/src/meta/: display.h  eadk_vars.cpp  eadk_vars.hpp
src/: main.py  numengine.bat  numengine.sh  requirements.txt  sprite.py
src/sprite_preview/: CMakeLists.txt
src/sprite_preview/src/: eadk.c  fragment_shader.glsl  main.cpp  rect.cpp  rect.hpp  shaders.cpp  shaders.hpp  vertex_shader.glsl
